aria2下载完成不保留aria2文件，并且移动文件到下载完成目录。

--- a/luci/openwrt-dist-luci/files/luci/i18n/aria2.zh-cn.po
+++ b/luci/openwrt-dist-luci/files/luci/i18n/aria2.zh-cn.po
@@ -28,6 +28,9 @@ msgstr "文件和目录"
 msgid "Default download directory"
 msgstr "默认下载目录"
 
+msgid "Default download complete directory"
+msgstr "默认下载完成目录"
+
 msgid "Disk cache"
 msgstr "磁盘缓存"
 
